--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
      <header>
-    <nav class="bg-white border-gray-200 px-4 lg:px-6 py-8.5 dark:bg-pink-900">
+    <nav class="bg-white border-gray-200 px-4 lg:px-6 py2.5 dark:bg-pink-900">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
             <!-- <a href="https://flowbite.com" class="flex items-center"> -->
                 <img src="./images/logo.jpg" class="mr-3 h-8 sm:h-18" alt="Flowbite Logo" />
@@ -61,7 +61,7 @@
     </div>
 
     <div class="image">
-        <img src="./images/girl.jpg" alt="">
+        <img src="./images/girl2.png" alt="">
     </div>
 
 
