--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          <h1>Financial planning with clarity and confidence</h1> <br>
 
     <!-- <button>Get Started</button> -->
-     <a href="#myModal" class="get-started-btn">Get Started</a>
+     <a href="register.html" class="get-started-btn">Get Started</a>
     </div>
 
     <div class="image">
@@ -68,29 +68,8 @@
 
 
 
-  <!-- Modal -->
-  <div id="myModal" class="modal">
-    <div class="modal-content">
-      <a href="#" class="close">&times;</a>
 
-      <form>
-        <img src="./images/logo.jpg" alt="Logo">
-        <h3>Make savings</h3>
 
-        <i class="fas fa-user"></i>
-        <input type="text" id="uname" placeholder="Username">
-
-        <input type="text" id="anumber" placeholder="Account number">
-
-        <i class="fas fa-lock"></i>
-        <input type="password" id="pswrd" placeholder="Password">
-
-        <br>
-        <button type="button" class="btn-register">Register</button>
-        <button type="button" class="btn-signin" onclick="window.location.href='login.html'">Sign in</button>
-      </form>
-    </div>
-  </div>
 </section>
 </body>
 </html>
