--- a/register.html
+++ b/register.html
@@ -90,7 +90,7 @@ form {
     <form action="">
 
         <img src="./images/logo.jpg" alt="">
-        <h3>My Bank</h3>
+        <h3>Track&Plan</h3>
         <i class="fas fa-user"></i>
         <input type="text" name="" id="uname" placeholder="Username">
         <input type="text" name="" id="anumber" placeholder="Account number">
