--- a/detials.html
+++ b/detials.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="detials.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <style>
@@ -13,7 +13,7 @@
   padding: 0;
 }
 body {
-    background-image: url('./images/bg2.jpg'); /* use colon and correct path */
+  /* use colon and correct path */
     background-size: cover;      /* make it cover the whole page */
     background-position: center; /* center the image */
     background-repeat: no-repeat; /* prevent tiling */
@@ -59,7 +59,7 @@ nav {
 .whole {
     display: flex;
   
-    gap: 30px;               
+    gap: 10%;               
     margin: 40px 20px;       
     flex-wrap: wrap;          
 }
@@ -69,7 +69,7 @@ nav {
     padding: 30px;
     border-radius: 22px;
     box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    width: 250px;           
+    width: 350px;           
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -132,6 +132,99 @@ nav {
 .btn:hover {
   background-color: aquamarine;
 }
+/* ......table.... .............................................. */
+
+#one {
+    height: 800px;
+    background-image: url('./images/bg4.jpg'); 
+       background-size: cover;     
+    background-position: center;
+    background-repeat: no-repeat; 
+}
+#thetable {
+    height: 800px;
+    background-image: url('./images/download\ \(21\).jpg'); 
+       background-size: cover;    
+    background-position: center; 
+    background-repeat: no-repeat; 
+}
+
+
+
+
+    h2 {
+      text-align: center;
+      color: #333;
+    }
+    .tables-container {
+      display: flex;
+      justify-content: space-between;
+      gap: 20px;
+      margin: 20px;
+      /* width: 900px; */
+    }
+    .styled-table {
+      /* width: 68%; */
+      border-collapse: collapse;
+      background: #fff;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    .styled-table {
+  width: 500px; 
+}
+.tables-container {
+  justify-content: center;
+  gap: 40px; 
+}
+
+    .styled-table thead {
+      background-color: #ffeebe;
+    }
+    .styled-table th, 
+    .styled-table td {
+      border: 1px solid #ddd;
+      padding: 10px;
+      text-align: center;
+      font-size: 14px;
+    }
+    .styled-table th {
+      font-weight: bold;
+    }
+    .income-title {
+      color: blue;
+      font-size: 20px;
+      margin-bottom: 5px;
+    }
+    .expense-title {
+      color: blue;
+      font-size: 20px;
+      margin-bottom: 5px;
+    }
+.summary {
+  clear: both;
+  padding: 15px;
+  border: 2px solid #000;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 16px;
+  background: #f9f9f9;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+
+  margin: 50px auto;
+}
+
+/* ..  */
+    .incomeTable{
+        width: 900px;
+
+    }
 </style>
 <body>
 
@@ -148,21 +241,21 @@ nav {
     </nav>
     <!-- ............  -->
 
-
+<section id="one">
   
     <div class="welcome">
     <h1>Welcome</h1>
-    <h3>Online banking services</h3>
+    <h3>Control your budget </h3>
     </div>
 
  <div class="whole">
 <div class="container1">
-    <h3>Deposit</h3>
+    <h3>Add Income</h3>
 
-    <input type="text" name="" id="depamount" placeholder="Enter amount">
-    <input type="text" name="" id="acno" placeholder="Enter account number">
+    <input type="text" name="" id="inamount" placeholder="Enter amount">
+    <input type="text" name="" id="intype" placeholder="Enter income type">
 
-    <button onclick="deposit()">Deposit</button>
+    <button onclick="income()">Add</button>
     <div id="result">
 
     </div>
@@ -170,17 +263,66 @@ nav {
 
 
 <div class="container2">
-    <h3>Withdraw</h3>
+    <h3>Add Expense</h3>
 
-    <input type="text" name="" id="withamount" placeholder="Enter amount">
-    <input type="text" name="" id="withacno" placeholder="Enter account number">
+    <input type="text" name="" id="expamount" placeholder="Enter amount">
+    <input type="text" name="" id="exptype" placeholder="Enter expense type">
 
-    <button onclick="withdraw()">Withdraw</button>
+    <button onclick="expense()">Add</button>
 
     <div id="withdrawresult"></div>
-</div>
+
 
 </div>
+
+</section>
+
+
+   <!-- ..................................  -->
+<section id="thetable">
+      <h2>Income and Expense Details</h2>
+  <hr>
+
+  <div class="tables-container">
+    <!-- Income Table -->
+    <div>
+      <div class="income-title">Income</div>
+      <table id="incomeTable" class="styled-table">
+        <thead>
+          <tr>
+            <th>Type</th>
+            <th>Amount</th>
+            <th>Balance</th>
+            <th>Date & Time</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+
+    <!-- Expense Table -->
+    <div>
+      <div class="expense-title">Expense</div>
+      <table id="expenseTable" class="styled-table">
+        <thead>
+          <tr>
+            <th>Type</th>
+            <th>Amount</th>
+            <th>Balance</th>
+            <th>Date & Time</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </div>
+
+  <!-- Summary -->
+  <div class="summary" id="summaryBox">
+    Total Income: ₹0 | Total Expense: ₹0 | Balance: ₹0
+  </div>
+
+</section>
 </body>
 <script src="script.js"></script>
 
