--- a/detials.html
+++ b/detials.html
@@ -251,8 +251,8 @@ nav {
 <section id="one">
   
     <div class="welcome">
-    <h1>Welcome</h1>
-    <h3>Control your budget </h3>
+    <h1>Welcome  <span id="displayName"></span></h1>
+    <h3>Turn expenses into savings</h3>
     </div>
 
  <div class="whole">
