--- a/login.html
+++ b/login.html
@@ -34,9 +34,9 @@
     height: 40px;
     max-width: 250px;
     background: #fff;
-    border: 2px solid #f26200; 
+    border: 2px solid #be123c; 
     border-radius: 25px;
-    color: #f26200;
+    color: #be123c; 
     cursor: pointer;
     font-weight: 500;
     transition: 0.3s;
@@ -47,7 +47,7 @@
     align-items: center;  
 }
 .btn:hover {
-    background: #f26200;
+    background:  #be123c; 
     color: #fff;
 }
 img {
@@ -66,9 +66,9 @@ img {
   display: flex;
   justify-content: center;  
   align-items: center;     
-  height: 80vh;            
+  height: 50vh;            
   width: 30%;
-  background-color: #acacac;
+  background-color: #aed3e6;
 
     border-radius: 12px;      
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); 
@@ -92,7 +92,7 @@ form {
         <h3>Track&Plan</h3>
 
 
-        <input type="text" name="" id="acno" placeholder="Account number">
+        <input type="text" name="" id="email" placeholder="email">
         <input type="text" name="" id="pswrd" placeholder="Password">
 
           <button type="button" class="btn" onclick="login()">login</button>
