--- a/register.html
+++ b/register.html
@@ -34,9 +34,9 @@
     height: 40px;
     max-width: 250px;
     background: #fff;
-    border: 2px solid #f26200; 
+    border: 2px solid #be123c; 
     border-radius: 25px;
-    color: #f26200;
+    color:  #be123c; 
     cursor: pointer;
     font-weight: 500;
     transition: 0.3s;
@@ -47,7 +47,7 @@
     align-items: center;  
 }
 .btn:hover {
-    background: #f26200;
+    background:  #e74971; 
     color: #fff;
 }
 img {
@@ -66,9 +66,9 @@ img {
   display: flex;
   justify-content: center;  
   align-items: center;     
-  height: 90vh;            
-  width: 40%;
-  background-color: #acacac;
+  height: 70vh;            
+  width: 30%;
+  background-color:#aed3e6;
 
     border-radius: 12px;      
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); 
@@ -93,7 +93,7 @@ form {
         <h3>Track&Plan</h3>
         <i class="fas fa-user"></i>
         <input type="text" name="" id="uname" placeholder="Username">
-        <input type="text" name="" id="anumber" placeholder="Account number">
+        <input type="text" name="" id="email" placeholder="email">
          <i class="fas fa-lock"></i>
         <input type="text" name="" id="pswrd" placeholder="Password">
 
