--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Budget Calculator</title>
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
         <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,7 @@
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
             <!-- <a href="https://flowbite.com" class="flex items-center"> -->
                 <img src="./images/logo.jpg" class="mr-3 h-8 sm:h-18" alt="Flowbite Logo" />
-                <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Nest</span>
+                <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Track&Plan</span>
             </a>
             <div class="flex items-center lg:order-2">
                 <a href="#" class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Log in</a>
